# hoomd-glab-plugins

./: ## Plan: Orientation-Aligning Angle Forc.prompt.md  .gitignore  CMakeLists.txt  README.md  demo_align_angle.ipynb  demo_external_patch.ipynb  demo_external_patch_filament.ipynb  demo_nematic_pair.ipynb  demo_sinsq_dihedral.ipynb
benchmarks/: benchmark_external_patch.ipynb
demos/: _bench_runner.py
docs/: _gen_filament_nb.py  demo_align_angle.ipynb  demo_cosine_angle.ipynb  demo_director_pair.ipynb  demo_external_patch.ipynb  demo_sinsq_dihedral.ipynb  demo_soft_harmonic.ipynb  demo_viz.py  energy_landscapes.ipynb  plot_energy_landscapes.py
docs/examples/: demo_sinsq_dihedral.ipynb  demo_soft_harmonic.ipynb
external_patch_force/: PLAN.md
profiling/: _profile_runner.py
src/: AlignAngleForceCompute.cc  AlignAngleForceCompute.h  AlignAngleForceComputeGPU.cc  AlignAngleForceComputeGPU.h  AlignAngleForceGPU.cu  AlignAngleForceGPU.cuh  CMakeLists.txt  CosineAngleForceCompute.cc  CosineAngleForceCompute.h  CosineAngleForceComputeGPU.cc  CosineAngleForceComputeGPU.h  CosineAngleForceGPU.cu  CosineAngleForceGPU.cuh  EvaluatorBondSoftHarmonic.h  EvaluatorPairNematic.h  ExternalPatchForceComputeGPU.cc  ExternalPatchForceComputeGPU.h  ExternalPatchForceGPU.cu  ExternalPatchForceGPU.cuh  SinSqDihedralForceCompute.cc  SinSqDihedralForceCompute.h  SinSqDihedralForceComputeGPU.cc  SinSqDihedralForceComputeGPU.h  SinSqDihedralForceGPU.cu  SinSqDihedralForceGPU.cuh  SoftHarmonicAngleForceCompute.cc  SoftHarmonicAngleForceCompute.h  SoftHarmonicAngleForceComputeGPU.cc  SoftHarmonicAngleForceComputeGPU.h  SoftHarmonicAngleForceGPU.cu  SoftHarmonicAngleForceGPU.cuh  SoftHarmonicBond.cc  SoftHarmonicBondGPU.cc  SoftHarmonicBondGPU.cu  SoftHarmonicTail.h  __init__.py  module.cc  version.py
src/pytest/: CMakeLists.txt  test_align_angle.py  test_cosine_angle.py  test_external_patch.py  test_nematic_pair.py  test_sinsq_dihedral.py  test_soft_harmonic_angle.py  test_soft_harmonic_bond.py
